CS-3647 z-index issues

--- a/static/sidebar/css/modal/styles.css
+++ b/static/sidebar/css/modal/styles.css
@@ -151,7 +151,7 @@ body  {
   height: 35px;
   position: absolute;
   overflow: hidden;
-  z-index: 10;
+  z-index: 2147483647;
   top: 0;
   right: 150px;
   -webkit-transform: rotate(90deg);
